--- a/2.html
+++ b/2.html
@@ -1,27 +1,20 @@
-<!doctype html>
+ï»¿<!doctype html>
+<html lang="ko">
 <html>
 <head>
   <title>test_coc</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="1.html">CSS</a></li>
-    <li><a href="1.html">JavaScript</a></li>
-  </ol>
-<div class="select-answer-wrap">
+  <h1>ì„¤ë¬¸ì¡°ì‚¬ í…ŒìŠ¤íŠ¸</h1>
+<p>Q.num ì§ˆë¬¸ë‚´ìš©</p>
 <ul class="select-answer">
-<li class="sa__item"><button type="button" data-anum="1" data-point="0" class="js-answer sa__btn">¸Å¿ì ÇÊ¿äÇÔ</button></li>
-<li class="sa__item"><button type="button" data-anum="2" data-point="3.3" class="js-answer sa__btn">¾à°£ ÇÊ¿äÇÔ</button></li>
-<li class="sa__item"><button type="button" data-anum="3" data-point="6.7" class="js-answer sa__btn">º°·Î ÇÊ¿äÇÏÁö ¾ÊÀ½</button></li>
-<li class="sa__item"><button type="button" data-anum="4" data-point="10" class="js-answer sa__btn">ÀüÇô ÇÊ¿äÇÏÁö ¾ÊÀ½</button></li>
+<li class="sa__item"><button type="button" data-anum="1" class="js-answer sa__btn">ë‹µë³€1</button></li>
+<li class="sa__item"><button type="button" data-anum="2" class="js-answer sa__btn">ë‹µë³€2</button></li>
+<li class="sa__item"><button type="button" data-anum="3" class="js-answer sa__btn">ë‹µë³€3</button></li>
+<li class="sa__item"><button type="button" data-anum="4" class="js-answer sa__btn">ë‹µë³€4</button></li>
 </ul>
-</div>
-  <h2>HTML</h2>
-  <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 speicification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-  </p><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
-  </p>
+<p><button type="button">ì´ì „</button>
+<button type="button">ë‹¤ìŒ</button></p>
 </body>
 </html>
