--- a/start.html
+++ b/start.html
@@ -14,6 +14,6 @@
 </h2>
 버튼 이미지, 글자, 이런것들은 전부 위치만 정하려고 넣어둔거니<br>
 무시하시고 보셔도 됩니다.
-<p><button type="button" class="navyBtn" onClick="location.href='https://coccar.github.io/testcoc/2.html'">Start</button></p>
+<p><button type="button" class="navyBtn" onClick="location.href='https://coccar.github.io/testcoc/2'">Start</button></p>
 </body>
 </html>
