--- a/2.html
+++ b/2.html
@@ -8,6 +8,7 @@
 <body>
   <h1>설문조사 테스트</h1>
 <p>Q.num 질문내용</p>
+<p><button type="button">마땅한 이미지 없어서 일단 버튼으로 현재진행 페이지표시</p>
 <ul class="select-answer">
 <li class="sa__item"><button type="button" data-anum="1" class="js-answer sa__btn">답변1</button></li>
 <li class="sa__item"><button type="button" data-anum="2" class="js-answer sa__btn">답변2</button></li>
