--- a/2.html
+++ b/2.html
@@ -16,6 +16,6 @@
 <li class="sa__item"><button type="button" data-anum="4" class="js-answer sa__btn">답변4</button></li>
 </ul>
 <p><button type="button">이전</button>
-<button type="button">다음</button></p>
+<button type="button" class="navyBtn" onClick="location.href='https://coccar.github.io/testcoc/3'">다음</button></p>
 </body>
 </html>
