--- a/2.html
+++ b/2.html
@@ -8,13 +8,15 @@
 <body>
   <h1>설문조사 테스트</h1>
 <p>Q.num 질문내용</p>
-<p><button type="button">마땅한 이미지 없어서 일단 버튼으로 현재진행 페이지표시</p>
+<p><button type="button">현재진행 페이지표시,이미지 생기면 입히기</button></p>
+<p>
 <ul class="select-answer">
 <li class="sa__item"><button type="button" data-anum="1" class="js-answer sa__btn">답변1</button></li>
 <li class="sa__item"><button type="button" data-anum="2" class="js-answer sa__btn">답변2</button></li>
 <li class="sa__item"><button type="button" data-anum="3" class="js-answer sa__btn">답변3</button></li>
 <li class="sa__item"><button type="button" data-anum="4" class="js-answer sa__btn">답변4</button></li>
 </ul>
+</p>
 <p><button type="button">이전</button>
 <button type="button" class="navyBtn" onClick="location.href='https://coccar.github.io/testcoc/3'">다음</button></p>
 </body>
