--- a/start.html
+++ b/start.html
@@ -4,6 +4,8 @@
 <head>
   <title>test_coc</title>
   <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, 
+  maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
   <h1>설문조사 테스트</h1>
