--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 부연설명1<br>
 부연설명2
   <h1>제목</h1>
-<img src="https://github.com/coccar/testcoc/blob/master/i1.jpg" style="max-width: 100%; height: auto;">
+<img src="https://github.com/coccar/testcoc/i1.jpg" style="max-width: 100%; height: auto;">
 <h2>
 부연설명3<br>
 <button type="button" class="navyBtn" onClick="location.href='https://coccar.github.io/testcoc/2'">Start</button>
