--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
   <h1>제목</h1>
 <img src="i1.jpg" style="max-width: 100%; height: auto;">
 <h2>
-부연설명3<br>
+부연설명3
 <button type="button" class="navyBtn" onClick="location.href='https://coccar.github.io/testcoc/2'">Start</button>
 </h2>
 </body>
