--- a/test.html
+++ b/test.html
@@ -16,5 +16,6 @@
 부연설명3
 <button type="button" class="navyBtn" onClick="location.href='https://coccar.github.io/testcoc/2'">Start</button>
 </h2>
+  <p>부연설명4</p>
 </body>
 </html>
