--- a/test.html
+++ b/test.html
@@ -14,8 +14,10 @@
 <img src="i1.jpg" style="max-width: 100%; height: auto;">
 <h2>
 부연설명3
-<button type="button" class="navyBtn" onClick="location.href='https://coccar.github.io/testcoc/2'">Start</button>
 </h2>
-  <p>부연설명4</p>
+<p>
+<button type="button" class="navyBtn" onClick="location.href='https://coccar.github.io/testcoc/page'">Start</button>
+</p>
+  <footer id="main_footer"><h5>여러분의 피드백은 큰 힘이 됩니다.</h5>
 </body>
 </html>
